--- a/data/webstack.yml
+++ b/data/webstack.yml
@@ -66,9 +66,9 @@
 - taxonomy: 深夜娱乐资源
   icon: fa-moon
   links:
-    - title: 极乐资源
+    - title: YP福利
       logo: 
-      url: https://www.jilezy.com
+      url: https:/6.f697.cc
       description: 提供深夜精选资源，实时更新，内容全面。
       
 - taxonomy: 在线电影网站
