--- a/data/webstack.yml
+++ b/data/webstack.yml
@@ -4,27 +4,27 @@
   icon: fa-star
   links: 
     - title: NG娱乐官网
-      logo: images/logos/NG66.png
+      logo: images/NG.png
       url: https://156.234.80.132:8866/#/link?join=13965795
       description: NG官方平台，畅玩多样化娱乐体验。
     - title: C7娱乐官网
-      logo: images/logos/C766.png
+      logo: images/C7.png
       url: https://c7111.com/
       description: 安全可靠的C7游戏平台入口。
     - title: NG备用官网
-      logo: images/logos/NG66.png
+      logo: images/NG.png
       url: https://103.39.16.2:8866/#/link?join=13965795
       description: NG官方备用地址，提供稳定访问体验。
     - title: C7备用官网
-      logo: images/logos/C766.png
+      logo: images/C7.png
       url: https://c71111.com/
       description: 流畅便捷的C7备用平台。
     - title: 移动端H5版 - NG娱乐
-      logo: images/logos/NG66.png
+      logo: images/NG.png
       url: https://103.54.60.22:8866/#/link?join=13965795
       description: NG娱乐H5版，免下载快速畅玩。
     - title: 移动端H5版 - C7娱乐
-      logo: images/logos/C766.png
+      logo: images/C7.png
       url: https://h5.c7h5gq.com/
       description: C7娱乐移动端平台，操作便捷，轻松畅玩。
 
@@ -32,27 +32,27 @@
   icon: fa-gamepad
   links:
     - title: PG电子试玩
-      logo: images/logos/PG.png
+      logo: images/PG.png
       url: https://hfuisahdl.com/page2/page_2.html
       description: 官方提供多款电子游戏平台试玩服务，畅享多元化的电子娱乐。
     - title: JDB电子试玩
-      logo: images/logos/JDB.png
+      logo: 
       url: https://www.jdbgaming.com
       description: 畅玩JDB经典电子游戏，真实体验精彩玩法。
     - title: CQ9电子试玩
-      logo: images/logos/CQ9.png
+      logo: 
       url: https://demo.cqgame.games
       description: CQ9官方试玩平台，尽享高品质娱乐盛宴。
     - title: PT电子试玩
-      logo: images/logos/PT.png
+      logo: images/PT.png
       url: https://www.playtech.com
       description: PT平台官方提供多款游戏免费试玩，真实感受娱乐魅力。
     - title: BBIN电子试玩
-      logo: images/logos/BBIN.png
+      logo: 
       url: https://www.bbin.com
       description: 亚洲领先的电子游戏平台，提供丰富多样的试玩游戏。
     - title: YGG电子试玩
-      logo: images/logos/YGG.png
+      logo: images/YGG.png
       url: https://www.yggdrasilgaming.com
       description: YGG全球知名游戏平台，享受独具特色的游戏内容。
 
@@ -60,19 +60,19 @@
   icon: fa-film
   links:
     - title: 人人影视
-      logo: images/logos/RR.png
+      logo: 
       url: https://www.yyets.com
       description: 提供丰富的海外影视资源，支持在线免费观看和下载，无需会员。
     - title: 茶杯狐
-      logo:  
+      logo:  images/CBH.png
       url: https://cupfox.app
       description: 全网影视聚合平台，支持在线查找和观看，无需注册。
     - title: 哔哩哔哩（B站）
-      logo: images/logos/BB.jpg
+      logo: images/BB.png
       url: https://www.bilibili.com
       description: 国内知名的视频社区，涵盖动漫、影视、娱乐、学习等领域。
     - title: 电影天堂
-      logo: images/logos/电影天堂.jpg
+      logo: images/DYTT.png
       url: https://www.dytt8.net
       description: 免费电影下载站，提供最新高清电影资源。
       
@@ -80,19 +80,19 @@
   icon: fa-video
   links:
     - title: 抖音
-      logo:  images/logos/DY.png
+      logo:  images/DY.png
       url: https://www.douyin.com/
       description: 国内最火爆的短视频平台，娱乐、知识、生活全覆盖。
     - title: 快手
-      logo: images/logos/KS.png
+      logo: images/KS.png
       url: https://www.kuaishou.com/
       description: 真实生活记录，涵盖短视频、直播等内容。
     - title: 小红书
-      logo: images/logos/XHS.png
+      logo: images/XHS.png
       url: https://www.xiaohongshu.com/
       description: 生活方式分享平台，短视频与社交结合。
     - title: 西瓜视频
-      logo: images/logos/XG.png
+      logo: images/XG.png
       url: https://www.ixigua.com/
       description: 字节跳动旗下综合视频平台，提供优质内容。
 
@@ -100,19 +100,19 @@
   icon: fa-comments
   links:
     - title: 纸飞机（Telegram）
-      logo: images/logos/ZFJ.png
+      logo: images/ZFJ.png
       url: https://telegram.org
       description: 全球加密聊天软件，私密安全。
     - title: 旺旺商聊
-      logo: images/logos/WW.png
+      logo: images/WW.png
       url: https://wangwangr.com
       description: 高效商务沟通工具，安全稳定。
     - title: 微信网页版
-      logo: images/logos/WX.png
+      logo: 
       url: https://wx.qq.com
       description: 电脑端微信聊天工具，方便快捷。
     - title: QQ网页版
-      logo: images/logos/QQ.png
+      logo: 
       url: https://web2.qq.com
       description: 电脑端QQ聊天，随时沟通无忧。
 
@@ -120,15 +120,15 @@
   icon: fa-bitcoin
   links:
     - title: 火币
-      logo: images/logos/HB.png
+      logo: images/HB.png
       url: https://www.huobi.com
       description: 全球领先的数字资产交易平台，提供安全稳定交易。
     - title: 币安
-      logo: images/logos/BA.png
+      logo: images/BA.png
       url: https://www.binance.com
       description: 国际顶级数字货币交易所，支持多种币种交易。
     - title: 欧意（OKX）
-      logo: images/logos/OY.png
+      logo: images/OY.png
       url: https://www.okx.com
       description: 专业数字资产交易平台，安全快捷。
     - title: 虚拟币使用教程
@@ -140,11 +140,11 @@
   icon: fa-shield
   links:
     - title: 爱加速
-      logo: images/logos/th-7.png
+      logo: images/AJS.png
       url: https://www.91ajs.com
       description: 提供稳定快速的网络加速服务，支持苹果和安卓设备。
     - title: 苹果小火箭（Shadowrocket）
-      logo: images/logos/512×512bb.jnp
+      logo: images/XHJ.png
       url: https://apps.apple.com/us/app/shadowrocket/id932747118
       description: 强大的网络代理工具，支持多协议并提供高自由度的配置功能。
 
@@ -164,11 +164,11 @@
       url: https://convertio.co/zh/
       description: 支持文档、图片、视频等多种格式转换，操作简单快速。
     - title: 在线PS
-      logo: images/logos/PS.png
+      logo: images/PS.png
       url: https://www.photopea.com/
       description: 免费在线Photoshop，强大且无需安装。
     - title: Speedtest测速
-      logo: images/logos/CS.png
+      logo: images/CS.png
       url: https://www.speedtest.net/
       description: 在线网络测速工具，精准测试你的网速。
     - title: Wolfram Alpha
