--- a/data/webstack.yml
+++ b/data/webstack.yml
@@ -132,7 +132,7 @@
       url: https://www.okx.com
       description: 专业数字资产交易平台，安全快捷。
     - title: 虚拟币使用教程
-      logo: 
+      logo: images/JC.png
       url: https://czusdt.vip
       description: 加密货币新手指南，帮助您快速入门。
 
