--- a/data/webstack.yml
+++ b/data/webstack.yml
@@ -5,27 +5,27 @@
   links: 
     - title: NG娱乐官网
       logo: images/NG.png
-      url: https://156.234.80.132:8866/#/link?join=13965795
+      url: https://8relmylt.ngk13.com/home#/home
       description: NG官方平台，畅玩多样化娱乐体验。
     - title: C7娱乐官网
       logo: images/C7.png
-      url: https://c7111.com/
+      url: https://43.249.173.90:7777/#/home
       description: 安全可靠的C7游戏平台入口。
     - title: NG备用官网
       logo: images/NG.png
-      url: https://103.39.16.2:8866/#/link?join=13965795
+      url: https://tkyzkhhx.ngn79.com/home#/home
       description: NG官方备用地址，提供稳定访问体验。
     - title: C7备用官网
       logo: images/C7.png
-      url: https://c71111.com/
+      url: https://156.234.198.126:7777/#/home
       description: 流畅便捷的C7备用平台。
     - title: 移动端H5版 - NG娱乐
       logo: images/NG.png
-      url: https://103.54.60.22:8866/#/link?join=13965795
+      url: https://h5.ngk11.com/#/home
       description: NG娱乐H5版，免下载快速畅玩。
     - title: 移动端H5版 - C7娱乐
       logo: images/C7.png
-      url: https://h5.c7h5gq.com/
+      url: https://h5.c7h5gq.com/#/home
       description: C7娱乐移动端平台，操作便捷，轻松畅玩。
 
 - taxonomy: 娱乐试玩
