--- a/data/webstack.yml
+++ b/data/webstack.yml
@@ -59,9 +59,9 @@
 - taxonomy: 深夜福利-老司机
   icon: fa-film
   links:
-    - title: 人人影视
+    - title: YP福利
       logo: images/x.png
-      url: https://x122a7r5csgup.com:58010
+      url: https://x122a7r5csgup.com
       description: 提供丰富的海外影视资源，支持在线免费观看和下载，无需会员。      
 
 - taxonomy: 在线观影
