--- a/data/webstack.yml
+++ b/data/webstack.yml
@@ -56,7 +56,7 @@
       url: https://www.yggdrasilgaming.com
       description: YGG全球知名游戏平台，享受独具特色的游戏内容。
 
-- taxonomy: 深夜福利-老司机
+- taxonomy: 深夜福利
   icon: fa-film
   links:
     - title: YP福利
